--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.116.0",
+    "motion": "^12.10.5",
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
