--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.116.0",
+    "autoprefixer": "^10.4.21",
     "motion": "^12.10.5",
     "next": "15.3.0",
-    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.3",
-    "tailwindcss": "^4.1.3"
+    "@tailwindcss/postcss": "^4.1.6",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.6"
   }
 }
