--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
