--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
     "@tanstack/react-query": "^5.74.3",
     "@tanstack/react-router": "^1.116.0",
     "motion": "^12.10.5",
@@ -16,6 +18,7 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^18.1.0",
     "zustand": "^4.5.7"
   },
   "devDependencies": {
